--- a/styles/blocks/_banner.scss
+++ b/styles/blocks/_banner.scss
@@ -30,7 +30,7 @@
     content: "";
     width: clamp(60px, 10.1vw, 194px);
     aspect-ratio: 1;
-    background: url(/icons/bold-arrow-down-right.svg) center/contain no-repeat;
+    background: url("icons/bold-arrow-down-right.svg") center/contain no-repeat;
     margin-left: 35px;
     margin-right: 30px;
 
