--- a/styles/blocks/_button.scss
+++ b/styles/blocks/_button.scss
@@ -42,7 +42,7 @@
       right: 0;
       height: 100%;
       aspect-ratio: 1;
-      background: url('/icons/arrow-top-right.svg') center/70% no-repeat;
+      background: url('icons/arrow-top-right.svg') center/70% no-repeat;
       border: var(--border-light);
       border-radius: 50%;
       
