--- a/styles/blocks/_footer.scss
+++ b/styles/blocks/_footer.scss
@@ -98,7 +98,7 @@
     right: 1px;
     height: 96%;
     aspect-ratio: 1;
-    background: url("/icons/arrow-top-right.svg") center/70% no-repeat;
+    background: url("icons/arrow-top-right.svg") center/70% no-repeat;
     border: var(--border-gray);
     border-radius: 50%;
 
@@ -139,7 +139,7 @@
   height: 0.7em;
   aspect-ratio: 1;
   display: inline-block;
-  background: url("/icons/bold-arrow-down-right.svg") center/contain no-repeat;
+  background: url("icons/bold-arrow-down-right.svg") center/contain no-repeat;
   scale: -1 1;
   margin-left: 0.5em;
 }
