--- a/styles/blocks/_motivation.scss
+++ b/styles/blocks/_motivation.scss
@@ -81,7 +81,7 @@
     right: calc(100% + 8px);
     width: 26px;
     aspect-ratio: 1;
-    background: url("/icons/plus.svg") center/contain no-repeat;
+    background: url("icons/plus.svg") center/contain no-repeat;
   }
 
   &::after {
