--- a/styles/blocks/_join-us.scss
+++ b/styles/blocks/_join-us.scss
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url('images/join-us-bg.jpg') center/cover no-repeat;
+    background: url('../images/join-us-bg.jpg') center/cover no-repeat;
   }
 
   &__video-block {
@@ -61,7 +61,7 @@
       content: '';
       width: 26px;
       aspect-ratio: 1;
-      background: url('icons/arrow-top-right.svg') center/contain no-repeat;
+      background: url('../icons/arrow-top-right.svg') center/contain no-repeat;
       
     }
 
@@ -99,7 +99,7 @@
       height: 0.7em;
       aspect-ratio: 1;
       display: inline-block;
-      background: url('icons/bold-arrow-down-right.svg') center/contain no-repeat;
+      background: url('../icons/bold-arrow-down-right.svg') center/contain no-repeat;
       scale: 1 -1;
       margin-left: 0.14em;
     }
